--- a/learning_logs/20251222.md
+++ b/learning_logs/20251222.md
@@ -1,3 +1,27 @@
-#2025/12/22 내용
+# 2025/12/22 내용
+
+### github commit 방법
+- git add .
+- git commit -m "코멘트"
+- git push
 
 
+# Java 기초
+## 정의
+- 객체 지향 프로그래밍(OOP : Object-oriented Programming) 언어, Write Once, Run Anywhere란느 철학을 바탕으로 한번 작성했을때 다양한 OS에서 작동될 수 있도록 함. 기본적으로 자바 가상머신(JVM : Java Virtual Machine)을 통해 프로그램이 실행되며, 이로 인해  OS가 하드웨어 차이에 상관없이 일관된 실행환경을 제공.
+
+## Java 언어의 개발 배경
+- 호환성과 이식성을 극대화 하기 위해 개발됨. 그래서 Java 관련 시험 문제 중에 '플랫폼 독립성'이라는 표현이 자주 등장합니다(정처기/정처산기 등). 운영체제에 관계없이 모든 플랫폼에서 실행될 수 있다는 점에서 큰 이점. 이는 Java가 '컴파일'되어 바이트 코드로 변환된 이후에 JVM에서 실행되기 때문.
+
+## 특징
+1. OOP 특징: 프로그램을 '객체'라는 독립적인 단위로 구성하여 문제를 해결. 객체는 상태(state)와 동작(behavior)을 가질 수 있으며, 코드의 재사용성, 유지보수 용이성, 확장성을 높여줍니다.  Java에서는 모든 코드가 클래스 내에서 정의되고, 객체를 생성하는 '틀'을 제공합니다.
+2. 플랫폼 독립성
+3. 자동메모리 관리 : Java는 garbage collection기능을 내장하고 있어, 개발자가 메모리 관리에 신경쓰지 않아도 됩니다. JVM은 사용되지 않는 객체를 자동으로 메모리에서 해제하여 메모리 누수 문제를 최소화합니다.
+4. 멀티 스레딩 :  동시에 여러 작업을 처리할 수 있도록 해주며, 자원의 낭비를 줄이고 성능을 향상시킵니다. 이는 대규모 애플리케이션이나 네트워크 개발에 특히 유용합니다.
+- MD 파일에서 코드 블럭 작성법 : 1. 왼쪽에 있는 이상하게 꺾인 작은 따옴표가 있는데 이를 '백틱'이라고 합니다. 백틱 세번 누르면 코드블럭이 생성됩니다.
+
+```java
+public static coid main (string[] args) {
+    System.out.println("hello Java!");
+}
+```
