--- a/learning_logs/20251222.md
+++ b/learning_logs/20251222.md
@@ -1,27 +1,63 @@
 # 2025/12/22 내용
-
-### github commit 방법
-- git add .
-- git commit -m "코멘트"
-- git push
-
-
 # Java 기초
 ## 정의
-- 객체 지향 프로그래밍(OOP : Object-oriented Programming) 언어, Write Once, Run Anywhere란느 철학을 바탕으로 한번 작성했을때 다양한 OS에서 작동될 수 있도록 함. 기본적으로 자바 가상머신(JVM : Java Virtual Machine)을 통해 프로그램이 실행되며, 이로 인해  OS가 하드웨어 차이에 상관없이 일관된 실행환경을 제공.
+#### 객체 지향 프로그래밍(OOP : Object-oriented Programming) 언어, Write Once, Run Anywhere란느 철학을 바탕으로 한번 작성했을때 다양한 OS에서 작동될 수 있도록 함. 기본적으로 자바 가상머신(JVM : Java Virtual Machine)을 통해 프로그램이 실행되며, 이로 인해  OS가 하드웨어 차이에 상관없이 일관된 실행환경을 제공.
 
 ## Java 언어의 개발 배경
-- 호환성과 이식성을 극대화 하기 위해 개발됨. 그래서 Java 관련 시험 문제 중에 '플랫폼 독립성'이라는 표현이 자주 등장합니다(정처기/정처산기 등). 운영체제에 관계없이 모든 플랫폼에서 실행될 수 있다는 점에서 큰 이점. 이는 Java가 '컴파일'되어 바이트 코드로 변환된 이후에 JVM에서 실행되기 때문.
+#### 호환성과 이식성을 극대화 하기 위해 개발됨. 그래서 Java 관련 시험 문제 중에 '플랫폼 독립성'이라는 표현이 자주 등장합니다(정처기/정처산기 등). 운영체제에 관계없이 모든 플랫폼에서 실행될 수 있다는 점에서 큰 이점. 이는 Java가 '컴파일'되어 바이트 코드로 변환된 이후에 JVM에서 실행되기 때문.
 
 ## 특징
-1. OOP 특징: 프로그램을 '객체'라는 독립적인 단위로 구성하여 문제를 해결. 객체는 상태(state)와 동작(behavior)을 가질 수 있으며, 코드의 재사용성, 유지보수 용이성, 확장성을 높여줍니다.  Java에서는 모든 코드가 클래스 내에서 정의되고, 객체를 생성하는 '틀'을 제공합니다.
-2. 플랫폼 독립성
-3. 자동메모리 관리 : Java는 garbage collection기능을 내장하고 있어, 개발자가 메모리 관리에 신경쓰지 않아도 됩니다. JVM은 사용되지 않는 객체를 자동으로 메모리에서 해제하여 메모리 누수 문제를 최소화합니다.
-4. 멀티 스레딩 :  동시에 여러 작업을 처리할 수 있도록 해주며, 자원의 낭비를 줄이고 성능을 향상시킵니다. 이는 대규모 애플리케이션이나 네트워크 개발에 특히 유용합니다.
-- MD 파일에서 코드 블럭 작성법 : 1. 왼쪽에 있는 이상하게 꺾인 작은 따옴표가 있는데 이를 '백틱'이라고 합니다. 백틱 세번 누르면 코드블럭이 생성됩니다.
+- OOP 특징: 프로그램을 '객체'라는 독립적인 단위로 구성하여 문제를 해결. 객체는 상태(state)와 동작(behavior)을 가질 수 있으며, 코드의 재사용성, 유지보수 용이성, 확장성을 높여줍니다.  Java에서는 모든 코드가 클래스 내에서 정의되고, 객체를 생성하는 '틀'을 제공합니다.
+- 플랫폼 독립성
+- 자동메모리 관리 : Java는 garbage collection기능을 내장하고 있어, 개발자가 메모리 관리에 신경쓰지 않아도 됩니다. JVM은 사용되지 않는 객체를 자동으로 메모리에서 해제하여 메모리 누수 문제를 최소화합니다.
+- 멀티 스레딩 :  동시에 여러 작업을 처리할 수 있도록 해주며, 자원의 낭비를 줄이고 성능을 향상시킵니다. 이는 대규모 애플리케이션이나 네트워크 개발에 특히 유용합니다.
 
 ```java
-public static coid main (string[] args) {
-    System.out.println("hello Java!");
-}
+    public static coid main (string[] args) {
+        System.out.println("hello Java!");
+    }
 ```
+
+# 변수
+## 변수(Variable)이란?
+#### 데이터를 담는 바구니에 비유하면 이해가 편하며 그 바구니에 이름을 지어줘야함.
+- 변수 선언 방법 : 자료형 변수명 = 데이터;
+- 바구니의 모양이 여러 종류가 있듯이 변수의 종류도 다양함.
+## 주석(Comment)이란?
+Java 프로그램의 경우 폴더 및 파일의 전체 코드를 컴파일링 하는데, 거기서 오류가 하나라도 발생하게 되면 전체 프로그램이 실행이 되지를 않습니다. 하지만 주석 처리를 한 부분에 대해서는 컴퓨터가 코드로 인지하지 않기 때문에 오류가 발생하지 않습니다.
+
+즉, 주석이란 컴퓨터가 읽어서 처리하는 부분이 아니라 사람이 읽어서 정보를 얻을 수 있는것에 의의가 있습니다.
+- 한줄 주석 : //
+- 다중 주석 : /* + enter
+- 사후 주석 : 주석 처리할 부분의 코드 라인에 ctrl + /
+
+## 하드코딩이란?
+명령문에 데이터(변수에 대입되지 않은 데이터인데 이를 리터럴(literal))를 바로 집어넣는 것으로, '지양'되는 방식.
+그렇다면 권장되는 방식은? 데이터를 '변수'에 대입하고, 변수를 통해서 명령을 내리는 방식.
+
+#### - 안좋은예
+```java
+    System.out.println("안녕하세요.");
+    System.out.println('1');
+    System.out.println("1");
+```
+
+####  - 좋은예
+```java
+    int scoreEnglish = 100; // 변수 선언 및 초기화
+    System.out.println(scoreEnglish);
+    scoreEnglish = 80; // 데이터 재대입
+    System.out.println(scoreEnglish);
+```
+
+## Java에서 변수 명명 규칙
+#### 카멜 표기법(camel case) 사용
+- 첫 문자는 소문자로 시작 / 북수의 단어로 이루어졌을 경우 두 번째 단어의 첫번째 문자만 대문자
+    - 한 단어 : result
+    - 복수 단어 : my TestResult
+
+- 특수 문자 지양
+
+ cf) python 학습 하신 분들의 경우 python 변수 표기 방식은 스네이크 표기법(snake case)이라고 해서 my_test_result와 같은 방식으로 작성합니다.
+
+
